--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,16 @@ body {
   right: 0;
   bottom: 0;
   padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-rows: auto 1fr;  
+  margin: 0;  
 }
 
 .caption {
-  grid-row: 1;
-  padding: 1em;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 2em;
+  padding: 0.5em;
   display: grid;
   grid-template-columns: 1fr auto;  
   background: #222;
@@ -42,5 +44,9 @@ body {
 }
 
 .animation-canvas {
-  grid-row: 2;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 2em;
 }
